--- a/src/app/content-placeholder/content-placeholder.component.scss
+++ b/src/app/content-placeholder/content-placeholder.component.scss
@@ -1,269 +1,139 @@
 .ContentPlaceholder--container {
+  width: 100%;
+  height: 100vh;
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  margin-top: 100px;
+  margin-bottom: 10px;
+  background-color: #ecf0f1;
+  .Title {
     width: 100%;
-    height: 100vh;
-    font-family: 'Roboto', sans-serif;
-    font-weight: bold;
-    margin-top: 100px;
-    margin-bottom: 10px;
-    background-color: #ecf0f1;
-
-    .Title {
-        width: 100%;
-        text-align: center;
-        margin: 0;
-        margin-top: 20px;
-        color: black;
+    text-align: center;
+    margin: 0;
+    margin-top: 20px;
+    color: black;
+    position: absolute;
+  }
+  .ContentPlaceholder--box {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    .card-content {
+      background-color: white;
+      border-radius: 10px;
+      overflow: hidden;
+      width: 350px;
+      padding: 30px;
+      box-sizing: border-box;
+      position: relative;
+      box-shadow: 0 0 10px rgba(128, 128, 128, 0.562);
+      .top-image {
+        width: 350px;
+        height: 205px;
         position: absolute;
-    }
-
-    .ContentPlaceholder--box {
-        width: 100%;
-        height: 100%;
+        top: 0;
+        left: 0;
+        background-color: #f6f7f8;
+        overflow: hidden;
         display: flex;
-        flex-direction: column;
-        justify-content: center;
         align-items: center;
-
-        .card {
-            background-color: white;
-            border-radius: 10px;
-            overflow: hidden;
-            width: 350px;
-            padding: 30px;
-            box-sizing: border-box;
-            position: relative;
-            box-shadow: 0 0 10px rgba(128, 128, 128, 0.562);
-
-            .top-image {
-                object-fit: cover;
-                position: absolute;
-                top: 0;
-                left: 0;
-            }
-
-            .text {
-                margin-top: 205px;
-                width: 350px;
-
-                .title {
-                    font-size: 18px;
-                }
-
-                .descript {
-                    font-size: 15px;
-                    margin-top: 5px;
-                    letter-spacing: .5px;
-                    color: gray;
-                    font-weight: lighter;
-                    width: 310px;
-                }
-
-                .personal {
-                    display: flex;
-
-                    .foto {
-                        width: 40px;
-                        height: 40px;
-                        border-radius: 100px;
-                    }
-
-                    .data-info {
-                        padding-top: 2px;
-                        margin-left: 10px;
-
-                        .name {
-                            font-size: 16px;
-                            margin: 0;
-                            margin-bottom: 5px;
-                        }
-
-                        .date {
-                            font-size: 13px;
-                            color: rgba(128, 128, 128, 0.555);
-                        }
-                    }
-                }
-            }
+        .top-image-anim {
+          position: absolute;
+          width: 20px;
+          height: 350px;
+          z-index: 10;
+          background-color: rgba(128, 128, 128, 0.342);
+          filter: blur(25px);
+          animation-name: toRight;
+          animation-duration: 1.3s;
+          animation-timing-function: ease;
+          animation-iteration-count: infinite;
         }
-
-        .card-content {
-            background-color: white;
-            border-radius: 10px;
-            overflow: hidden;
-            width: 350px;
-            padding: 30px;
-            box-sizing: border-box;
-            position: relative;
-            box-shadow: 0 0 10px rgba(128, 128, 128, 0.562);
-
-            .top-image {
-                width: 350px;
-                height: 205px;
-                position: absolute;
-                top: 0;
-                left: 0;
-                background-color: #f6f7f8;
-                overflow: hidden;
-                display: flex;
-                align-items: center;
-
-                .top-image-anim {
-                    position: absolute;
-                    width: 20px;
-                    height: 350px;
-                    z-index: 10;
-                    background-color: rgba(128, 128, 128, 0.342);
-                    filter: blur(25px);
-                    animation-name: toRight;
-                    animation-duration: 1.3s;
-                    animation-timing-function: ease;
-                    animation-iteration-count: infinite;
-                }
-            }
-
-            .text {
-                margin-top: 205px;
-
-                .title {
-                    height: 10px;
-                    margin-bottom: 40px;
-                    background-color: #f6f7f8;
-                    overflow: hidden;
-                    display: flex;
-                    align-items: center;
-                    position: relative;
-                    border-radius: 100px;
-
-                    .title-anim {
-                        position: absolute;
-                        width: 20px;
-                        height: 10px;
-                        background-color: rgb(128, 128, 128);
-                        filter: blur(20px);
-                        animation-name: toRight;
-                        animation-duration: 1.3s;
-                        animation-timing-function: ease;
-                        animation-iteration-count: infinite;
-                    }
-                }
-
-                .descript {
-                    margin-top: 10px;
-                    height: 10px;
-                    background-color: #f6f7f8;
-                    overflow: hidden;
-                    display: flex;
-                    align-items: center;
-                    position: relative;
-                    border-radius: 100px;
-
-                    .descript-anim {
-                        position: absolute;
-                        width: 20px;
-                        height: 10px;
-                        background-color: rgb(128, 128, 128);
-                        filter: blur(20px);
-                        animation-name: toRight;
-                        animation-duration: 1.3s;
-                        animation-timing-function: ease;
-                        animation-iteration-count: infinite;
-                    }
-                }
-
-                .personal {
-                    display: flex;
-                    margin-top: 20px;
-
-                    .foto {
-                        width: 40px;
-                        height: 40px;
-                        border-radius: 100px;
-                        margin-top: 10px;
-                        background-color: rgba(231, 231, 231, 0.39);
-                        overflow: hidden;
-                        display: flex;
-                        align-items: center;
-                        position: relative;
-
-                        .foto-anim {
-                            position: absolute;
-                            width: 5px;
-                            height: 40px;
-                            background-color: rgba(128, 128, 128, 0.267);
-                            filter: blur(5px);
-                            animation-name: toRight;
-                            animation-duration: 1.3s;
-                            animation-timing-function: ease;
-                            animation-iteration-count: infinite;
-                        }
-                    }
-
-                    .data-info {
-                        padding-top: 2px;
-                        margin-left: 10px;
-
-                        .name {
-                            margin-bottom: 15px;
-                            margin-top: 10px;
-                            height: 10px;
-                            width: 100px;
-                            background-color: #f6f7f8;
-                            overflow: hidden;
-                            display: flex;
-                            align-items: center;
-                            position: relative;
-                            border-radius: 100px;
-
-                            .name-anim {
-                                position: absolute;
-                                width: 20px;
-                                height: 10px;
-                                background-color: rgba(128, 128, 128, 0.445);
-                                filter: blur(10px);
-                                animation-name: toRight;
-                                animation-duration: 1.3s;
-                                animation-timing-function: ease;
-                                animation-iteration-count: infinite;
-                            }
-                        }
-
-                        .date {
-                            height: 10px;
-                            width: 100px;
-                            background-color: #f6f7f8;
-                            overflow: hidden;
-                            display: flex;
-                            align-items: center;
-                            position: relative;
-                            border-radius: 100px;
-
-                            .date-anim {
-                                position: absolute;
-                                width: 20px;
-                                height: 10px;
-                                background-color: rgba(128, 128, 128, 0.445);
-                                filter: blur(10px);
-                                animation-name: toRight;
-                                animation-duration: 1.3s;
-                                animation-timing-function: ease;
-                                animation-iteration-count: infinite;
-                            }
-                        }
-                    }
-                }
-            }
+      }
+      .text {
+        margin-top: 205px;
+        .title {
+          height: 10px;
+          margin-bottom: 40px;
+          background-color: #f6f7f8;
+          overflow: hidden;
+          display: flex;
+          align-items: center;
+          position: relative;
+          border-radius: 100px;
+          .title-anim {
+            position: absolute;
+            width: 20px;
+            height: 10px;
+            background-color: rgb(128, 128, 128);
+            filter: blur(20px);
+            animation-name: toRight;
+            animation-duration: 1.3s;
+            animation-timing-function: ease;
+            animation-iteration-count: infinite;
+          }
         }
+        .descript {
+          margin-top: 10px;
+          height: 10px;
+          background-color: #f6f7f8;
+          overflow: hidden;
+          display: flex;
+          align-items: center;
+          position: relative;
+          border-radius: 100px;
+          .descript-anim {
+            position: absolute;
+            width: 20px;
+            height: 10px;
+            background-color: rgb(128, 128, 128);
+            filter: blur(20px);
+            animation-name: toRight;
+            animation-duration: 1.3s;
+            animation-timing-function: ease;
+            animation-iteration-count: infinite;
+          }
+        }
+        .personal {
+          display: flex;
+          margin-top: 20px;
+          .foto {
+            width: 40px;
+            height: 40px;
+            border-radius: 100px;
+            margin-top: 10px;
+            background-color: rgba(231, 231, 231, 0.39);
+            overflow: hidden;
+            display: flex;
+            align-items: center;
+            position: relative;
+            .foto-anim {
+              position: absolute;
+              width: 5px;
+              height: 40px;
+              background-color: rgba(128, 128, 128, 0.267);
+              filter: blur(5px);
+              animation-name: toRight;
+              animation-duration: 1.3s;
+              animation-timing-function: ease;
+              animation-iteration-count: infinite;
+            }
+          }
+        }
+      }
     }
+  }
 }
-
 @keyframes toRight {
-    0% {
-        position: absolute;
-        left: -20%;
-    }
-
-    100% {
-        position: absolute;
-        left: 110%;
-    }
+  0% {
+    position: absolute;
+    left: -20%;
+  }
+  100% {
+    position: absolute;
+    left: 110%;
+  }
 }
