--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,5 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div class="home-container">
+    <app-header />
+    <router-outlet></router-outlet>
+    <app-footer />
+</div>
