--- a/src/app/pokedex/pokedex.component.scss
+++ b/src/app/pokedex/pokedex.component.scss
@@ -1,107 +1,111 @@
 .Pokedex--container {
+  width: 100%;
+  height: auto;
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  margin-top: 100px;
+  margin-bottom: 10px;
+  background: linear-gradient(
+    to left,
+    rgb(237, 237, 189) 0%,
+    rgb(213, 212, 220) 100%
+  );
+  position: relative;
+  padding-bottom: 200px;
+
+  .Title {
+    width: 100%;
+    text-align: center;
+    margin: 0;
+    margin-top: 20px;
+    color: black;
+    position: absolute;
+  }
+
+  .Pokedex--box {
     width: 100%;
     height: auto;
-    font-family: 'Roboto', sans-serif;
-    font-weight: bold;
-    margin-top: 100px;
-    margin-bottom: 10px;
-    background: linear-gradient(to left, rgb(237, 237, 189) 0%, rgb(213, 212, 220) 100%);
     position: relative;
-    padding-bottom: 200px;
+    top: 100px;
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(6, 180px);
+    gap: 20px;
 
-    .Title {
-        width: 100%;
-        text-align: center;
-        margin: 0;
-        margin-top: 20px;
-        color: black;
-        position: absolute;
-    }
+    .card {
+      display: flex;
+      height: 300px;
+      width: 180px;
+      box-sizing: border-box;
+      justify-content: center;
+      position: relative;
 
-    .Pokedex--box {
+      .back {
+        border-radius: 10px;
         width: 100%;
-        height: auto;
+        height: 100%;
         position: relative;
-        top: 100px;
-        display: grid;
-        justify-content: center;
-        grid-template-columns: repeat(6, 180px);
-        gap: 20px;
+        transition: all 0.5s ease;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        box-sizing: border-box;
 
-        .card {
-            display: flex;
-            height: 300px;
-            width: 180px;
-            box-sizing: border-box;
-            justify-content: center;
-            position: relative;
-
-            .back {
-                border-radius: 10px;
-                width: 100%;
-                height: 100%;
-                position: relative;
-                transition: all .5s ease;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                box-sizing: border-box;
-
-                .img-cont {
-                    width: 120px;
-                    height: 120px;
-                    border-radius: 100%;
-                    margin-top: 40px;
-                    transition: all .5s ease;
-                    margin-bottom: 20px;
-                }
-
-                &.rot-cont {
-                    transform: rotateX(80deg);
-                    transition: all .3s ease;
-                }
-
-                .id {
-                    margin: 0;
-                    padding: 5px 10px;
-                    border-radius: 10px;
-                    font-weight: lighter;
-                    font-size: 14px;
-                    mix-blend-mode: multiply;
-                }
-
-                .name {
-                    margin: 0;
-                    font-size: 20px;
-                    margin-top: 10px;
-                }
-
-                .type {
-                    margin: 0;
-                    font-weight: normal;
-                    margin-top: 10px;
-                    font-size: 15px;
-                }
-            }
-
-            .image {
-                width: 100px;
-                height: 100px;
-                position: absolute;
-                image-rendering: pixelated;
-                z-index: 10;
-                transition: all .3s ease;
-                margin-top: 30%;
-                display: flex;
-                justify-content: center;
-
-                &.anim {
-                    display: flex;
-                    justify-content: center;
-                    transform: scale(2) translateY(-30px);
-                    transition: all .5s ease;
-                }
-            }
+        .img-cont {
+          width: 120px;
+          height: 120px;
+          border-radius: 100%;
+          margin-top: 40px;
+          transition: all 0.5s ease;
+          margin-bottom: 20px;
         }
+
+        &.rot-cont {
+          transform: rotateX(80deg);
+          transition: all 0.3s ease;
+        }
+
+        .id {
+          margin: 0;
+          padding: 5px 10px;
+          border-radius: 10px;
+          font-weight: lighter;
+          font-size: 14px;
+          mix-blend-mode: multiply;
+        }
+
+        .name {
+          margin: 0;
+          font-size: 20px;
+          margin-top: 10px;
+        }
+
+        .type {
+          margin: 0;
+          font-weight: normal;
+          margin-top: 10px;
+          font-size: 15px;
+        }
+      }
+
+      .image {
+        width: 100px;
+        height: 100px;
+        position: absolute;
+        image-rendering: pixelated;
+        z-index: 10;
+        transition: all 0.3s ease;
+        margin-top: 30%;
+        display: flex;
+        justify-content: center;
+
+        &.anim {
+          display: flex;
+          justify-content: center;
+          transform: scale(1);
+          transition: all 0.5s ease;
+        }
+      }
     }
+  }
 }
